openshift/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallpaper-demo
  labels:
    app.kubernetes.io/part-of: wallpaper-demo
    argocd.argoproj.io/managed-by: openshift-gitops
